# xl_api

./: .gitignore  Makefile  app.py  pyproject.toml
.github/workflows/: main.yml
xl_api/: main.py
