[tool.poetry]
name = "celery_demo"
version = "0.1.0"
description = ""
authors = ["Danny Beachnau <DannyBeachnau@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"
openpyxl = "^3.0.9"
fastapi = "^0.74.1"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
python-multipart = "^0.0.5"
loguru = "^0.6.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
